[gd_scene load_steps=5 format=3 uid="uid://dpafieeq18qyh"]

[ext_resource type="FontFile" uid="uid://cjadtb5vjx7y3" path="res://fonts/Xolonium-Regular.ttf" id="1_icc4k"]
[ext_resource type="Script" path="res://hud.gd" id="1_tdfdn"]

[sub_resource type="InputEventAction" id="InputEventAction_bs3up"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_cxo4m"]
events = [SubResource("InputEventAction_bs3up")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_tdfdn")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_icc4k")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_icc4k")
theme_override_font_sizes/font_size = 64
text = "圣爱音躲避重女!坚持90秒!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 220.0
offset_right = 100.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_icc4k")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_cxo4m")
text = "开始"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WinButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 183.0
offset_right = 66.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_icc4k")
text = "爱音的MVP结算"

[node name="BgmChangeButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("1_icc4k")
theme_override_font_sizes/font_size = 35
text = "更换BGM"

[node name="BgmName" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -162.97
offset_right = 66.0
offset_bottom = -126.97
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_icc4k")
theme_override_font_sizes/font_size = 26
text = "春日影"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RewardButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 147.215
offset_right = 44.0
offset_bottom = 178.216
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_icc4k")
text = "爱音的照片"

[node name="RewardMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 97.4
offset_right = 20.0
offset_bottom = 120.4
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_icc4k")
theme_override_font_sizes/font_size = 26
text = "坚持130秒!有惊喜!"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="WinButton" to="." method="_on_win_button_pressed"]
[connection signal="pressed" from="BgmChangeButton" to="." method="_on_bgm_change_button_pressed"]
[connection signal="pressed" from="RewardButton" to="." method="_on_reward_button_pressed"]
